  and/or db.ignore.internal.links, rename those parameters to linkdb.max.inlinks and
  linkdb.max.anchor.length and linkdb.ignore.internal.links
* db.ignore.internal.links and db.ignore.external.links now operate on the CrawlDB only
* linkdb.ignore.internal.links and linkdb.ignore.external.links now operate on the LinkDB only

Nutch Change Log

* NUTCH-2250 CommonCrawlDumper : Invalid format and skipped parts (Thamme Gowda N.,lewismc via mattmann)

* NUTCH-2245 Developed the NGram Model on the existing Unigram Cosine Similarity Model (bhavyasanghavi via sujen)

* NUTCH-2191 Add HtmlUnit plugin in Nutch. (karanjeets and markus17 via mattmann)

* NUTCH-2241 Unstable Selenium plugin in Nutch. Fixed bugs and enhanced configuration (karanjeets via mattmann)

* NUTCH-2213 CommonCrawlDataDumper saves gzipped body in extracted form (jnioche via mattmann)

* NUTCH-2144 Added an extension point and a plugin to accept external links (Thamme Gowda N. via mattmann)

* NUTCH-1712 Use MultipleInputs in Injector to make it a single mapreduce job (tejasp, snagel)

* NUTCH-2231 Jexl support in generator job (markus)

* NUTCH-2232 DeduplicationJob should decode URL's before length is compared (Ron van der Vegt via markus)

* NUTCH-2229 Allow Jexl expressions on CrawlDatum's fixed attributes (markus)

* NUTCH-2227 RegexParseFilter (markus)

* NUTCH-2221 Introduce db.ignore.internal.links to FetcherThread (markus)

* NUTCH-2220 Rename db.* options used only by the linkdb to linkdb.* (markus)

* NUTCH-2228 Plugin index-replace unit test broken on Java 8 (snagel via markus)

* NUTCH-2219 Criteria order to be configurable in DeduplicationJob (Ron van der Vegt via markus)

* NUTCH-2218 Update CrawlComplete util to use Commons CLI (Joyce)

* NUTCH-2223 Upgrade xercesImpl to 2.11.0 to fix hang on issue in tika mimetype detection (Tien Nguyen Manh via markus)

* NUTCH-2224 Average bytes/second calculated incorrectly in fetcher (Tien Nguyen Manh via markus)
